--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
   "manifest_version": 2,
   "name": "better-help-scout",
   "description": "Some UI tweaks to HelpScout",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "icons": {
-    "64": "icons/icon.png"
+    "48": "icons/icon.svg",
+    "64": "icons/icon.svg",
+    "96": "icons/icon.svg"
   },
   "content_scripts": [
     {
